WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123488
Mavericks: 128 tests are failing due to pixel differences
https://bugs.webkit.org/show_bug.cgi?id=123488
Summary
Mavericks: 128 tests are failing due to pixel differences
Ryosuke Niwa
Reported
2013-10-29 20:08:48 PDT
http://build.webkit.org/results/Apple%20Mavericks%20Release%20WK1%20(Tests)/r158244%20(215)/results.html
We're missing some black border on this one:
http://build.webkit.org/results/Apple%20Mavericks%20Release%20WK1%20(Tests)/r158244%20(215)/csswg/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-clipped-004-diffs.html
Similarly,
http://build.webkit.org/results/Apple%20Mavericks%20Release%20WK1%20(Tests)/r158244%20(215)/css2.1/20110323/overflow-applies-to-010-diffs.html
Attachments
proposed fix
(4.85 KB, patch)
2013-10-30 10:31 PDT
,
Alexey Proskuryakov
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-10-29 20:31:26 PDT
This looks a lot like the issue that led to
http://trac.webkit.org/changeset/155683
and related patches again...
Ryosuke Niwa
Comment 2
2013-10-29 21:14:09 PDT
So these failures don't exist on debug builder:
http://build.webkit.org/builders/Apple%20Mavericks%20Debug%20WK1%20%28Tests%29
I'm not sure why these failure are only visible on release builds.
Alexey Proskuryakov
Comment 3
2013-10-30 10:31:35 PDT
Created
attachment 215522
[details]
proposed fix
Alexey Proskuryakov
Comment 4
2013-10-30 11:03:04 PDT
Committed <
http://trac.webkit.org/r158290
>.
Alexey Proskuryakov
Comment 5
2013-10-30 11:16:22 PDT
Oh, and I threw AppleLanguages into the mix because I happened to know that it's also read during NSApplication initialization, and some effects of that are persistent.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug